syntax = "proto3";
package cosmos.crypto.secp256k1;

// This file contains types which are copied from
// https://github.com/celestiaorg/cosmos-sdk/blob/76bcf5af73b0a166552b64f9df0f87cc813aba76/proto/cosmos/crypto/secp256k1/keys.proto
// (v1.18.3-sdk-v0.46.14 tag).

// PubKey defines a secp256k1 public key
// Key is the compressed form of the pubkey. The first byte depends is a 0x02 byte
// if the y-coordinate is the lexicographically largest of the two associated with
// the x-coordinate. Otherwise the first byte is a 0x03.
// This prefix is followed with the x-coordinate.
message PubKey {
  bytes key = 1;
}
